iptables.rules
# Generated by iptables-save v1.4.21 on Tue Nov 29 00:35:39 2016
*raw
:PREROUTING ACCEPT [236:31435]
:OUTPUT ACCEPT [146:20158]
COMMIT
# Completed on Tue Nov 29 00:35:39 2016
# Generated by iptables-save v1.4.21 on Tue Nov 29 00:35:39 2016
*nat
:PREROUTING ACCEPT [19:2172]
:INPUT ACCEPT [17:1020]
:OUTPUT ACCEPT [9:678]
:POSTROUTING ACCEPT [9:678]
COMMIT
# Completed on Tue Nov 29 00:35:39 2016
# Generated by iptables-save v1.4.21 on Tue Nov 29 00:35:39 2016
*mangle
:PREROUTING ACCEPT [236:31435]
:INPUT ACCEPT [234:30283]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [146:20158]
:POSTROUTING ACCEPT [176:26711]
COMMIT
# Completed on Tue Nov 29 00:35:39 2016
# Generated by iptables-save v1.4.21 on Tue Nov 29 00:35:39 2016
*filter
:INPUT ACCEPT [49:4500]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [30:4808]		
#  Allow loopback (lo0) traffic and drop all traffic to 127/8 that doesn't use the lo0 interface
-A INPUT -i lo -j ACCEPT
-A INPUT ! -i lo -d 127.0.0.1/8 -j REJECT	
#  Accept established inbound connections
-A INPUT -m state --state ESTABLISHED,RELATED -j ACCEPT
#  Allow all outgoing traffic
-A OUTPUT -j ACCEPT
# Allow HTTP and HTTPS
-A INPUT -p tcp --dport 80 -j ACCEPT
-A INPUT -p tcp --dport 443 -j ACCEPT
# Allow Minecraft - default ports
-A INPUT -p tcp --dport 25565 -j ACCEPT
#  Allow SSH
# Change the value 22 if you are using a non-standard port
-A INPUT -p tcp -m state --state NEW --dport 22 -j ACCEPT
# Allow ping requests
-A INPUT -p icmp -m icmp --icmp-type 8 -j ACCEPT
# Reject everything else
-A INPUT -j REJECT
-A FORWARD -j REJECT
COMMIT
# Completed on Tue Nov 29 00:35:39 2016
